log/build_2020-11-24_00-33-33/py_pubsub/stderr.log
  File "/home/iic/conversion/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/subscriber_member_function.py", line 45
    print('msg encoding : ' msg.encoding)
                              ^
SyntaxError: invalid syntax

